--- a/html/detail.html
+++ b/html/detail.html
@@ -20,8 +20,8 @@
             <div class="container">
                 <div class="social-media">
                     <span data-translate-key="follow-us-title">Ikuti Kami di</span>
-                    <a href="#"><img src="../assets/logo-instagram.webp" alt="Instagram" class="logo-ig"></a>
-                    <a href="#"><img src="../assets/logo-facebook.webp" alt="Facebook" class="logo-fb"></a>
+                    <a href="https://www.instagram.com/varelrivaldi_hutabarat/" target="_blank"><img src="../assets/logo-instagram.webp" alt="Instagram" class="logo-ig"></a>
+                    <a href="https://www.facebook.com/varel.rival.9" target="_blank"><img src="../assets/logo-facebook.webp" alt="Facebook" class="logo-fb"></a>
                 </div>
                 <nav class="header-top-nav">
                     <ul>
