--- a/html/register.html
+++ b/html/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MineCart - Tentang Kami</title>
+    <title>MineCart - Daftar</title>
     <link rel="icon" href="../assets/logo-MineCart.png">
     <link rel="stylesheet" href="../css/style.css">
 
@@ -110,8 +110,10 @@
             <div class="container">
                 <div class="social-media">
                     <span data-translate-key="follow-us-title">Ikuti Kami di</span>
-                    <a href="https://www.instagram.com/varelrivaldi_hutabarat/" target="_blank"><img src="../assets/logo-instagram.webp" alt="Instagram" class="logo-ig"></a>
-                    <a href="https://www.facebook.com/varel.rival.9" target="_blank"><img src="../assets/logo-facebook.webp" alt="Facebook" class="logo-fb"></a>
+                    <a href="https://www.instagram.com/varelrivaldi_hutabarat/" target="_blank"><img
+                            src="../assets/logo-instagram.webp" alt="Instagram" class="logo-ig"></a>
+                    <a href="https://www.facebook.com/varel.rival.9" target="_blank"><img
+                            src="../assets/logo-facebook.webp" alt="Facebook" class="logo-fb"></a>
                 </div>
                 <nav class="header-top-nav">
                     <ul>
@@ -139,10 +141,17 @@
 
         <div class="header-main">
             <div class="container">
-                <a href="../index.html" class="logo">
-                    <img src="../assets/logo-MineCart.png" alt="MineCart Logo">
-                    <span>MineCart</span>
-                </a>
+                <div class="header-main-left">
+                    <a href="../index.html" class="logo">
+                        <img src="../assets/logo-MineCart.png" alt="MineCart Logo">
+                        <span>MineCart</span>
+                    </a>
+                    <button class="hamburger-btn" aria-label="Buka Menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                </div>
 
                 <form class="search-bar" action="search.html" method="GET">
                     <input type="search" name="q" placeholder="Cari di MineCart..." data-translate-key="search-title"
@@ -174,10 +183,8 @@
                     </ul>
                 </nav>
 
-                <button class="hamburger-btn" aria-label="Buka Menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                <button class="search-toggle-btn" aria-label="Buka Pencarian">
+                    <img src="assets/logo-search.png" alt="Ikon Cari">
                 </button>
             </div>
         </div>
