--- a/html/search.html
+++ b/html/search.html
@@ -21,8 +21,10 @@
             <div class="container">
                 <div class="social-media">
                     <span data-translate-key="follow-us-title">Ikuti Kami di</span>
-                    <a href="https://www.instagram.com/varelrivaldi_hutabarat/" target="_blank"><img src="../assets/logo-instagram.webp" alt="Instagram" class="logo-ig"></a>
-                    <a href="https://www.facebook.com/varel.rival.9" target="_blank"><img src="../assets/logo-facebook.webp" alt="Facebook" class="logo-fb"></a>
+                    <a href="https://www.instagram.com/varelrivaldi_hutabarat/" target="_blank"><img
+                            src="../assets/logo-instagram.webp" alt="Instagram" class="logo-ig"></a>
+                    <a href="https://www.facebook.com/varel.rival.9" target="_blank"><img
+                            src="../assets/logo-facebook.webp" alt="Facebook" class="logo-fb"></a>
                 </div>
                 <nav class="header-top-nav">
                     <ul>
@@ -50,10 +52,17 @@
 
         <div class="header-main">
             <div class="container">
-                <a href="../index.html" class="logo">
-                    <img src="../assets/logo-MineCart.png" alt="MineCart Logo">
-                    <span>MineCart</span>
-                </a>
+                <div class="header-main-left">
+                    <a href="../index.html" class="logo">
+                        <img src="../assets/logo-MineCart.png" alt="MineCart Logo">
+                        <span>MineCart</span>
+                    </a>
+                    <button class="hamburger-btn" aria-label="Buka Menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
+                </div>
 
                 <form class="search-bar" action="search.html" method="GET">
                     <input type="search" name="q" placeholder="Cari di MineCart..." data-translate-key="search-title"
@@ -86,11 +95,10 @@
                     </ul>
                 </nav>
 
-                <button class="hamburger-btn" aria-label="Buka Menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                <button class="search-toggle-btn" aria-label="Buka Pencarian">
+                    <img src="assets/logo-search.png" alt="Ikon Cari">
                 </button>
+
             </div>
         </div>
     </header>
